--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-router-dom": "^6.11.2",
+    "react-router-hash-link": "^2.4.3",
     "reset-css": "^5.0.1",
     "styled-components": "^5.3.6"
   },
