--- a/src/constants/projects.json
+++ b/src/constants/projects.json
@@ -35,7 +35,7 @@
     "description": "Love Thy Selfie is an intuitive, mobile-first React application designed to digitally transform a local photo booth business. Embodying the spirit of 'Love Thy Selfie', this platform offers users a comprehensive overview of the diverse services provided, including vivid picture examples, and authentic customer reviews. It also showcases the geographic service areas to help customers understand their reach. One of the key features is a seamlessly integrated contact form powered by Email.js, enabling customers to easily inquire about booking opportunities. With its user-friendly interface and responsive design, the Love Thy Selfie website effectively brings the unique essence of the photo booth experience online, and at the fingertips of potential customers.",
     "thumbnail": "projects/love_thy_selfie.png",
     "github": "https://github.com/missatrox44/love-thy-selfie",
-    "deployed": "https://love-thy-selfie.vercel.app/",
+    "deployed": "https://www.lovethyselfiephotobooth.com/",
     "date": "May 2022"
   }
 ]
