added timeline to experience page

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.13.0",
     "react-router-hash-link": "^2.4.3",
     "react-spring": "^9.7.2",
+    "react-vertical-timeline-component": "^3.6.0",
     "reset-css": "^5.0.1",
     "styled-components": "^5.3.6"
   },
